Disable all GPU on Linux Mesa driver 10.1.3 or older.

This driver is reported to render incorrectly and crash.  The most common crash
is in gpu::gles2::GLES2DecoderImpl::HandleReadPixels, and is happening
on multiple GPU vendors and types with this driver version.

R=zmo@chromium.org
BUG=629434
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2645123003
Cr-Commit-Position: refs/heads/master@{#452622}

Former-commit-id: f747b99b3a9c6ddac3470d61d3f292a019e1c1c2